--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "@types/passport-jwt": "^3.0.10",
         "@types/passport-local": "^1.0.36",
         "bcrypt": "^5.1.1",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.0",
         "mysql2": "^3.6.1",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
